# hr-censorship-dashboard

./: .gitignore  Makefile  README.md  db-variables.sample.env  docker-compose.sample.yml  envfile.sample
backend/: Dockerfile  docker-entrypoint.sh  index.py  pyproject.toml
backend/src/backend/: index.py
crawler/: Dockerfile-crawler  Dockerfile-importer  Dockerfile-importer-asn  Dockerfile-patcher  crawler.py  docker-entrypoint.sh  importer-asn.py  importer.py  pyproject.toml
crawler-legacy/: Dockerfile-crawler  Dockerfile-importer  crawler.py
crawler/src/crawler/: crawler.py
crawler/tests/: test_crawler.py
database/: init.sql  new-20180822.sql  new-20181109.sql  new-20181204.sql  new-20200219.sql  new-20200220.sql  new-20201031.sql  new-20201105.sql  new-20201106.sql
frontend/: .env  .env.development  .gitignore  Caddyfile  package.json
frontend/public/: index.html
frontend/src/: .AnomalyCountry.jsx.swp  AnomalyCountry.jsx  AnomalyCurrent.jsx  AnomalyIncident.jsx  AnomalySite.jsx  AnomalySummary.jsx  App.js  CurrentInaccessible.jsx  DowntimeSummary.jsx  dashboard.js  fetcher.js  index.js
frontend/src/components/: AnomalyCountry.jsx  AnomalyIncident.jsx  AnomalySite.jsx  AnomalySummary.jsx  App.js
frontend/src/features/data/: AggregatedSlice.js  IncidentSlice.js  MeasurementSlice.js  SummarySlice.js  WikidataSlice.js
frontend/src/features/meta/: CategorySlice.js  CountrySlice.js  ISPSlice.js  SiteSlice.js
frontend/src/features/ui/: TaskSlice.js
frontend/src/libraries/: fetcher.js  utils.js
frontend/src/reducers/: index.js
importer/: Dockerfile  docker-entrypoint.sh  pyproject.toml
importer/src/importer/: importer.py
importer/tests/: test_importer.py
patcher/: Dockerfile  docker-entrypoint.sh  pyproject.toml
patcher/src/patcher/: patcher.py
patcher/tests/: test_patcher.py
