[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Jeffrey04 <mycyberpet@yahoo.com>"]

[tool.poetry.dependencies]
python = "^3.9"
hug = "^2.6.1"
gunicorn = "^20.0.4"
PyMySQL = "^0.10.1"
cachetools = "^4.1.1"
cryptography = "^39.0.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^20.8b1"
prospector = "^1.3.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
