[tool.poetry]
name = "crawler"
version = "0.1.0"
description = ""
authors = ["Jeffrey04 <mycyberpet@yahoo.com>"]

[tool.poetry.dependencies]
python = "^3.9"
PyMySQL = "^0.10.1"
aiohttp = {extras = ["speedups"], version = "^3.7.2"}
cryptography = "^3.2.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^20.8b1"
prospector = "^1.3.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
crawler = "crawler.crawler:main"
