[tool.poetry]
name = "importer"
version = "0.1.0"
description = ""
authors = ["Jeffrey04 <mycyberpet@yahoo.com>"]

[tool.poetry.dependencies]
python = "^3.9"
dask = {extras = ["dataframe"], version = "^2.30.0"}
cryptography = "^3.2.1"
PyMySQL = "^0.10.1"
odo = {git = "https://github.com/blaze/odo"}
SQLAlchemy = "^1.3.20"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
importer = "importer.importer:main"